--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "bulma": "^0.9.2",
     "bulma-o-steps": "^1.1.0",
