--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.17.1",
     "bulma": "^0.9.2",
     "bulma-o-steps": "^1.1.0",
+    "bulma-switch": "^2.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
