--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
     "express": "^4.15.2",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
     "html-to-text": "^3.2.0",
