--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "body-parser": "^1.17.1",
     "bulma": "^0.9.2",
     "bulma-o-steps": "^1.1.0",
