--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@creativebulma/bulma-tagsinput": "^1.0.3",
     "@googlemaps/google-maps-services-js": "^3.1.16",
     "body-parser": "^1.17.1",
     "bulma": "^0.9.2",
     "bulma-o-steps": "^1.1.0",
     "bulma-switch": "^2.0.0",
+    "bulma-tagsinput": "^2.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -32,6 +34,7 @@
     "juice": "^4.0.2",
     "mongoose": "^4.8.7",
     "mongoose-mongodb-errors": "0.0.2",
+    "node-schedule": "^2.0.0",
     "nodemailer": "^3.1.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
