--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
+    "hamburgers": "^1.1.3",
     "html-to-text": "^3.2.0",
     "juice": "^4.0.2",
     "mongoose": "^4.8.7",
