--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "node start.js",
     "css-build": "node-sass public/sass/style.scss public/dist/css/style.css",
     "load-data": "node ./data/load-sample-data.js",
-    "delete-data": "node ./data/load-sample-data.js --delete",
-    "cypress:open": "cypress open",
-    "test": "cypress run --record --key 90127939-5a6a-43fe-b92b-87ab52275ef5"
+    "delete-data": "node ./data/load-sample-data.js --delete"
   },
   "author": "2BY2",
   "license": "ISC",
@@ -27,7 +25,6 @@
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
     "express": "^4.15.2",
-    "express-formidable": "^1.2.0",
     "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
     "hamburgers": "^1.1.3",
@@ -41,14 +38,10 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "pug": "^2.0.0-beta6",
-    "slugs": "^0.1.3",
     "validator": "^7.0.0"
   },
   "devDependencies": {
     "@creativebulma/bulma-collapsible": "^1.0.4",
-    "cypress": "^7.0.1",
-    "node-sass": "^5.0.0",
-    "nodemon": "^2.0.7",
-    "parcel-bundler": "^1.12.4"
+    "node-sass": "^5.0.0"
   }
 }
